--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <body>
 
   <!-- header section strats -->
-  <header class="header_section innerpage_header">
+  <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
@@ -51,10 +51,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="service.html">Service</a>
+                <a href="index.html">Pagina inicial</a>
+                <a href="about.html">sobre</a>
+                <a href="gallery.html">Galeria</a>
+                <a href="service.html">Serviços</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -84,11 +84,16 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais. Com um
+              foco central na qualidade, funcionalidade e estética, a Shapel busca não apenas fornecer móveis de alta
+              qualidade, mas também criar experiências que transformem ambientes.
+              <br> <br>
+              Seu catálogo abrange uma ampla gama de estilos, desde peças clássicas até designs contemporâneos, todos
+              criados por uma equipe de designers talentosos e colaboradores experientes. A empresa se destaca por sua
+              capacidade de combinar funcionalidade e beleza, adaptando-se às necessidades específicas de cada cliente e
+              oferecendo soluções que refletem personalidade e estilo.
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
         </div>
       </div>
@@ -99,7 +104,7 @@
 
 
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section ">
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -112,48 +117,44 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais.
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="info_detail">
             <h4>
-              Company
+              Empresa
             </h4>
             <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+              Há mais de 20 anos no mercado de redecorações e design de interiores, Shapel é uma empresa que cumpre que
+              seu objetivo de deixar o cliente satisfeito
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Contatos
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                (11) 2345-6789
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                Shappelcompany@gmail.com
               </span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Siga-nos
           </h4>
           <div class="social_box">
             <a href="">
@@ -174,6 +175,7 @@
     </div>
   </section>
 
+
   <!-- end info_section -->
 
 
@@ -182,7 +184,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Shapel Company</a>
       </p>
     </div>
   </footer>
