--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="service.html">Service</a>
+                <a href="index.html">Pagina inicial</a>
+                <a href="about.html">sobre</a>
+                <a href="gallery.html">Galeria</a>
+                <a href="service.html">Serviços</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -113,16 +113,14 @@
       <div class="col-md-8 col-lg-6 mx-auto">
         <div class="inner_detail-box">
           <h1>
-            Interior Design <br>
-            Studio
+            Design de interiores
           </h1>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
+            O melhor serviço nacional, com uma equipe especializada em ambientação de interiores e decoração!
           </p>
           <div>
             <a href="" class="slider-link">
-              CONTACT US
+              ENTRE EM CONTATO
             </a>
           </div>
         </div>
@@ -145,15 +143,15 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                Sobre nós
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais. Com um
+              foco central na qualidade, funcionalidade e estética, a Shapel busca não apenas fornecer móveis de alta
+              qualidade, mas também criar experiências que transformem ambientes.
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
         </div>
       </div>
@@ -168,7 +166,7 @@
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2>
-          Gallery
+          Galeria
         </h2>
       </div>
       <div class="row">
@@ -222,9 +220,6 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
-          View All
-        </a>
       </div>
     </div>
   </div>
@@ -238,7 +233,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Services
+          Serviços
         </h2>
       </div>
       <div class="row">
@@ -249,14 +244,13 @@
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Decoração residencial
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                O serviço de decoração residencial pode incluir desde a elaboração de um plano de design inicial até a
+                seleção e aquisição de mobiliário e decorações, gerenciamento de projetos, coordenação de reformas, até
+                a fase final de instalação.
               </p>
-              <a href="">
-                Read More
-              </a>
             </div>
           </div>
         </div>
@@ -267,14 +261,13 @@
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Decoração Comercial
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Nossos serviços abrangem desde a concepção do layout e design de interiores até a seleção de móveis,
+                iluminação, materiais, cores, texturas e decoração, sempre considerando a eficiência operacional e a
+                experiência do client
               </p>
-              <a href="">
-                Read More
-              </a>
             </div>
           </div>
         </div>
@@ -285,14 +278,14 @@
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Decoração de escritório
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Esses serviços incluem a seleção e disposição de móveis ergonômicos, escolha de cores, iluminação
+                adequada, design de layout que promova a colaboração e a eficiência, além de elementos decorativos que
+                reforcem a identidade da empresa.
               </p>
-              <a href="">
-                Read More
-              </a>
+
             </div>
           </div>
         </div>
@@ -303,67 +296,13 @@
 
   <!-- end service section -->
 
-
-
-  <!-- blog section -->
-
-  <section class="blog_section ">
-    <div class="container-fluid">
-      <div class="heading_container">
-        <h2>
-          Latest Blog
-        </h2>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 ">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/b1.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Velit tempora molestias quae
-              </h5>
-              <p>
-                Omnis itaque ducimus excepturi dignissimos voluptatibus sequi nisi ut ullam, perspiciatis doloribus! Cum itaque sint quibusdam aut vel. A esse labore.
-              </p>
-              <a href="">
-                Read More
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 ">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/b2.jpg" alt="">
-            </div>
-            <div class="detail-box">
-              <h5>
-                Repudiandae voluptatum quaerat
-              </h5>
-              <p>
-                Totam non minus suscipit, exercitationem deserunt doloribus provident dolor quos nulla impedit, perspiciatis excepturi eius hic vero harum deleniti.
-              </p>
-              <a href="">
-                Read More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end blog section -->
-
   <!-- client section -->
 
   <section class="client_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Testimonial
+          Comentários
         </h2>
       </div>
       <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
@@ -378,13 +317,11 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Siaalya
+                        Pedro vitor
                       </h6>
                     </div>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
+                      A loja tem o melhor atendimento e a melhor equipe, super recomendo!
                     </p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                   </div>
@@ -402,13 +339,12 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Siaalya
+                        Mateus Braga
                       </h6>
                     </div>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
+                      Empresa com profissionais de alta performance, finalizaram a decoração do meu escritório antes do
+                      prazo e ficou simplesmente incrível!
                     </p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                   </div>
@@ -426,13 +362,12 @@
                   <div class="detail-box">
                     <div class="name">
                       <h6>
-                        Siaalya
+                        Lucas Fernando
                       </h6>
                     </div>
                     <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readable cIt is a long established fact
-                      that a reader will be distracted by the readable c
+                      FANTÁSTICA! Essa empresa é A MELHOR! Atendimento excelente, estrutura, tanto de forma online
+                      quanto presencial, perfeita... Recomendo muito!
                     </p>
                     <i class="fa fa-quote-left" aria-hidden="true"></i>
                   </div>
@@ -465,25 +400,25 @@
           <div class="form_container">
             <div class="heading_container ">
               <h2>
-                Contact Us
+                Entre em contato
               </h2>
             </div>
             <form action="">
               <div>
-                <input type="text" placeholder="Your Name" />
+                <input type="text" placeholder="Seu nome" />
               </div>
               <div>
-                <input type="text" placeholder="Phone Number" />
+                <input type="text" placeholder="Número" />
               </div>
               <div>
                 <input type="email" placeholder="Email" />
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="text" class="message-box" placeholder="Mensagem" />
               </div>
               <div class="btn_box">
-                <button>
-                  SEND
+                <button id="meuBotao">
+                  <a href="sucessfull.html">Enviar</a>
                 </button>
               </div>
             </form>
@@ -492,15 +427,16 @@
         <div class="col-md-5 col-lg-6">
           <div class="subscribe-box">
             <h3>
-              Subscribe To Our Newsletter
+              Inscreva-se para ficar por dentro de todas as novidades da loja
             </h3>
             <p>
-              Neque, omnis? Maiores consectetur molestiae assumenda earum ea exercitationem velit tempora molestias quae, neque voluptas magnam maxime, repudiandae voluptatum quaerat tempore accusamus.
+              Ao se increver no nosso blog, você ficará por dentro de todas as informações, promoções e reformas. Assim,
+              você não perderá nada.
             </p>
             <form action="">
-              <input type="email" placeholder="Enter your email">
+              <input type="email" placeholder="Digite seu email">
               <button>
-                Subscribe
+                <a href="subscribe.html">Increver-se</a>
               </button>
             </form>
           </div>
@@ -524,48 +460,44 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais.
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="info_detail">
             <h4>
-              Company
+              Empresa
             </h4>
             <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+              Há mais de 20 anos no mercado de redecorações e design de interiores, Shapel é uma empresa que cumpre que
+              seu objetivo de deixar o cliente satisfeito
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Contatos
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                (11) 2345-6789
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                Shappelcompany@gmail.com
               </span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Siga-nos
           </h4>
           <div class="social_box">
             <a href="">
@@ -594,7 +526,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Shapel Company</a>
       </p>
     </div>
   </footer>
@@ -630,6 +562,8 @@
   <script src="js/custom.js"></script>
 
   <script src="js/cart.js"></script>
+
+  <script src="js/animation.js"></script>
 
 </body>
 
