--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 <body>
 
   <!-- header section strats -->
-  <header class="header_section innerpage_header">
+  <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
@@ -51,10 +51,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="service.html">Service</a>
+                <a href="index.html">Pagina inicial</a>
+                <a href="about.html">sobre</a>
+                <a href="gallery.html">Galeria</a>
+                <a href="service.html">Serviços</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -72,7 +72,7 @@
     <div class="container-fluid">
       <div class="heading_container">
         <h2>
-          Latest Blog
+          Ultimos blogs
         </h2>
       </div>
       <div class="row">
@@ -83,14 +83,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Velit tempora molestias quae
+                Quarto personalizado/moderno
               </h5>
               <p>
-                Omnis itaque ducimus excepturi dignissimos voluptatibus sequi nisi ut ullam, perspiciatis doloribus! Cum itaque sint quibusdam aut vel. A esse labore.
-              </p>
-              <a href="">
-                Read More
-              </a>
+                Um quarto moderno apresenta um design contemporâneo que combina estética sofisticada, funcionalidade e
+                conforto. Aqui está uma descrição breve de um quarto com estilo moderno: </p>
             </div>
           </div>
         </div>
@@ -101,14 +98,12 @@
             </div>
             <div class="detail-box">
               <h5>
-                Repudiandae voluptatum quaerat
+                Sala de estar rústica
               </h5>
               <p>
-                Totam non minus suscipit, exercitationem deserunt doloribus provident dolor quos nulla impedit, perspiciatis excepturi eius hic vero harum deleniti.
+                Uma sala de estar rústica é um ambiente acolhedor que evoca uma sensação de conforto e calor, muitas
+                vezes incorporando elementos naturais e materiais tradicionais. Aqui está uma descrição concisa:
               </p>
-              <a href="">
-                Read More
-              </a>
             </div>
           </div>
         </div>
@@ -119,7 +114,7 @@
   <!-- end blog section -->
 
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section ">
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -132,48 +127,44 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais.
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="info_detail">
             <h4>
-              Company
+              Empresa
             </h4>
             <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+              Há mais de 20 anos no mercado de redecorações e design de interiores, Shapel é uma empresa que cumpre que
+              seu objetivo de deixar o cliente satisfeito
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Contatos
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                (11) 2345-6789
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                Shappelcompany@gmail.com
               </span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Siga-nos
           </h4>
           <div class="social_box">
             <a href="">
@@ -202,7 +193,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Shapel Company</a>
       </p>
     </div>
   </footer>
