--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 <body>
 
   <!-- header section strats -->
-  <header class="header_section innerpage_header">
+  <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
@@ -54,10 +54,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="service.html">Service</a>
+                <a href="index.html">Pagina inicial</a>
+                <a href="about.html">sobre</a>
+                <a href="gallery.html">Galeria</a>
+                <a href="service.html">Serviços</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -74,7 +74,7 @@
     <div class="container-fluid">
       <div class="heading_container heading_center">
         <h2>
-          Gallery
+          GALERIA
         </h2>
       </div>
       <div class="row">
@@ -139,7 +139,7 @@
 
 
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section ">
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -152,48 +152,44 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais.
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="info_detail">
             <h4>
-              Company
+              Empresa
             </h4>
             <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+              Há mais de 20 anos no mercado de redecorações e design de interiores, Shapel é uma empresa que cumpre que
+              seu objetivo de deixar o cliente satisfeito
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Contatos
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                (11) 2345-6789
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                Shappelcompany@gmail.com
               </span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Siga-nos
           </h4>
           <div class="social_box">
             <a href="">
@@ -214,6 +210,7 @@
     </div>
   </section>
 
+
   <!-- end info_section -->
 
 
@@ -222,7 +219,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Shapel Company</a>
       </p>
     </div>
   </footer>
