--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
 <body>
 
   <!-- header section strats -->
-  <header class="header_section innerpage_header">
+  <header class="header_section">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
@@ -51,10 +51,10 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="service.html">Service</a>
+                <a href="index.html">Pagina inicial</a>
+                <a href="about.html">sobre</a>
+                <a href="gallery.html">Galeria</a>
+                <a href="service.html">Serviços</a>
                 <a href="blog.html">Blog</a>
               </div>
             </div>
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Services
+          Serviços
         </h2>
       </div>
       <div class="row">
@@ -82,14 +82,13 @@
             </div>
             <div class="detail-box">
               <h5>
-                Residential Decoration
+                Decoração residencial
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                O serviço de decoração residencial pode incluir desde a elaboração de um plano de design inicial até a
+                seleção e aquisição de mobiliário e decorações, gerenciamento de projetos, coordenação de reformas, até
+                a fase final de instalação.
               </p>
-              <a href="">
-                Read More
-              </a>
             </div>
           </div>
         </div>
@@ -100,14 +99,13 @@
             </div>
             <div class="detail-box">
               <h5>
-                Ecommercial Decoration
+                Decoração Comercial
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Nossos serviços abrangem desde a concepção do layout e design de interiores até a seleção de móveis,
+                iluminação, materiais, cores, texturas e decoração, sempre considerando a eficiência operacional e a
+                experiência do client
               </p>
-              <a href="">
-                Read More
-              </a>
             </div>
           </div>
         </div>
@@ -118,14 +116,14 @@
             </div>
             <div class="detail-box">
               <h5>
-                Office Decoration
+                Decoração de escritório
               </h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque distinctio aspernatur officiis exercitationem asperiores praesentium
+                Esses serviços incluem a seleção e disposição de móveis ergonômicos, escolha de cores, iluminação
+                adequada, design de layout que promova a colaboração e a eficiência, além de elementos decorativos que
+                reforcem a identidade da empresa.
               </p>
-              <a href="">
-                Read More
-              </a>
+
             </div>
           </div>
         </div>
@@ -137,7 +135,7 @@
   <!-- end service section -->
 
   <!-- info section -->
-  <section class="info_section innerpage_info_section">
+  <section class="info_section ">
     <div class="container">
       <div class="row info_main_row">
         <div class="col-md-6 col-lg-3">
@@ -150,48 +148,44 @@
               </a>
             </h4>
             <p class="mb-0">
-              Asperiores at, error, delectus aut voluptatem provident cum quam magni necessitatibus molestias eveniet reprehenderit maiores voluptate.
+              A Shapel é uma empresa de destaque no ramo de móveis e design de interiores, reconhecida por sua
+              excelência em oferecer soluções personalizadas e inovadoras para espaços residenciais e comerciais.
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="info_detail">
             <h4>
-              Company
+              Empresa
             </h4>
             <p class="mb-0">
-              when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to
+              Há mais de 20 anos no mercado de redecorações e design de interiores, Shapel é uma empresa que cumpre que
+              seu objetivo de deixar o cliente satisfeito
             </p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Contact Us
+            Contatos
           </h4>
           <div class="info_contact">
             <a href="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Location
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call +01 1234567890
+                (11) 2345-6789
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope"></i>
               <span>
-                demo@gmail.com
+                Shappelcompany@gmail.com
               </span>
             </a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <h4>
-            Follow Us
+            Siga-nos
           </h4>
           <div class="social_box">
             <a href="">
@@ -220,7 +214,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Shapel Company</a>
       </p>
     </div>
   </footer>
